[package]
name = "git-reviewers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
form_urlencoded = "1.1.0"
url = "2.3.1"
regex = "1.6.0"
serde_json = "1.0.87"
env_logger = "*"
clap = { version = "4.0.23", features = ["derive"] }
clap-verbosity-flag = "2.0.0"
linked_hash_set = "0.1.4"
rand = "0.8.5"
dirs = "*"
